# serializer version: 1
# name: test_diagnostics[key_file]
  dict({
    'active_entries': list([
      dict({
        'age': 0,
        'interface': 'Vlan10',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
      dict({
        'age': 0,
        'interface': 'Vlan20',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
    ]),
    'counts': dict({
      'arp_active': 2,
      'home': 2,
      'tracked': 2,
    }),
    'device': dict({
      'base_mac': '**REDACTED**',
      'hostname': '**REDACTED**',
      'model': 'C1111-8PE',
      'serial': '**REDACTED**',
      'sw_version': '17.09.04a',
    }),
    'entry': dict({
      'data': dict({
        'auth_method': 'key_file',
        'host': '**REDACTED**',
        'host_key': '**REDACTED**',
        'key_file': '**REDACTED**',
        'legacy_algorithms': False,
        'passphrase': '**REDACTED**',
        'port': 22,
        'username': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'cisco_ios_tracker',
      'entry_id': '01JCISCO0000000000000000AB',
      'minor_version': 1,
      'options': dict({
        'consider_home': 180,
        'max_arp_age': 0,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'host_key_pinned': True,
    'host_key_type': 'ssh-rsa',
    'last_update_success': True,
    'legacy_algorithms': False,
    'options': dict({
      'consider_home': 180,
      'max_arp_age': 0,
    }),
  })
# ---
# name: test_diagnostics[password]
  dict({
    'active_entries': list([
      dict({
        'age': 0,
        'interface': 'Vlan10',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
      dict({
        'age': 0,
        'interface': 'Vlan20',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
    ]),
    'counts': dict({
      'arp_active': 2,
      'home': 2,
      'tracked': 2,
    }),
    'device': dict({
      'base_mac': '**REDACTED**',
      'hostname': '**REDACTED**',
      'model': 'C1111-8PE',
      'serial': '**REDACTED**',
      'sw_version': '17.09.04a',
    }),
    'entry': dict({
      'data': dict({
        'auth_method': 'password',
        'host': '**REDACTED**',
        'host_key': '**REDACTED**',
        'legacy_algorithms': False,
        'password': '**REDACTED**',
        'port': 22,
        'username': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'cisco_ios_tracker',
      'entry_id': '01JCISCO0000000000000000AB',
      'minor_version': 1,
      'options': dict({
        'consider_home': 180,
        'max_arp_age': 0,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'host_key_pinned': True,
    'host_key_type': 'ssh-rsa',
    'last_update_success': True,
    'legacy_algorithms': False,
    'options': dict({
      'consider_home': 180,
      'max_arp_age': 0,
    }),
  })
# ---
# name: test_diagnostics[private_key]
  dict({
    'active_entries': list([
      dict({
        'age': 0,
        'interface': 'Vlan10',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
      dict({
        'age': 0,
        'interface': 'Vlan20',
        'ip': '**REDACTED**',
        'mac': '**REDACTED**',
      }),
    ]),
    'counts': dict({
      'arp_active': 2,
      'home': 2,
      'tracked': 2,
    }),
    'device': dict({
      'base_mac': '**REDACTED**',
      'hostname': '**REDACTED**',
      'model': 'C1111-8PE',
      'serial': '**REDACTED**',
      'sw_version': '17.09.04a',
    }),
    'entry': dict({
      'data': dict({
        'auth_method': 'private_key',
        'host': '**REDACTED**',
        'host_key': '**REDACTED**',
        'legacy_algorithms': False,
        'passphrase': '**REDACTED**',
        'port': 22,
        'private_key': '**REDACTED**',
        'username': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'cisco_ios_tracker',
      'entry_id': '01JCISCO0000000000000000AB',
      'minor_version': 1,
      'options': dict({
        'consider_home': 180,
        'max_arp_age': 0,
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'host_key_pinned': True,
    'host_key_type': 'ssh-rsa',
    'last_update_success': True,
    'legacy_algorithms': False,
    'options': dict({
      'consider_home': 180,
      'max_arp_age': 0,
    }),
  })
# ---
